--- a/client/src/css/stylesheet.scss
+++ b/client/src/css/stylesheet.scss
@@ -281,7 +281,6 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
     .card {
-        height: 18vw;
         font-size: 0.85em;
         border-radius: 3vw;
     }
